     loading process (parser and preprocessor errors), including the
     ability to copy the report to clipboard.
   * New UI for displaying the notification that a screenshot or map
     screenshot was successfully saved to disk, including options to open it
     in an external application, copy the path to clipboard, or browse the
     screenshots folder.
   * Fixed bug #21584: Properly redraw the minimap when the minimap is
     resized.
   * Fixed: Enable blurring in the title screen.
   * Added descriptions to the options in Preferences -> Display -> Themes.
   * New sound played to signal the start of an MP game.
 * WML engine:
   * WML loading phase errors are reported to stderr in a new indented format.
   * Implemented [true] and [false] ConditionalWML tags, which describe a
     condition that always yields true or false, respectively.
   * Fixed: Disallow change and remove sections without an id in the ThemeWML.
   * Added [theme] description attribute for including a description of the
     theme that will be displayed in Preferences.
   * [theme] name attribute is now expected to be translatable and used only
     for the theme selection UI. Existing [theme]s need to be converted to
     have a separate 'id' attribute.
   * [endlevel] now has two optional subtags [next_scenario_settings],
     [next_scenario_append], which can be used to reconfigure next scenario.
   * Optimizations made to the game events engine. Slower machines may notice
     an improvement during movement (when enter/exit_hex events are triggered).
     The optimization is more effective when relatively few events have variables
     in their names.
 * Miscellaneous and bug fixes:
   * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
   * Added -Wold-style-cast to the CMake strict flags.
   * Made sure that cmake does not add -NDEBUG for release builds since this
     flag breaks building.
   * Updated screenshots used inside the ingame help and fixed description of