@@ -51,6 +51,8 @@ Version 1.11.9+dev:
      screenshot was successfully saved to disk, including options to open it
      in an external application, copy the path to clipboard, or browse the
      screenshots folder.
+   * Force grayscale antialiasing for text rendered using Cairo/Pango (e.g. by
+     GUI2) on Windows to work around ClearType-induced glitches (bug #21648).
    * Fixed bug #21584: Properly redraw the minimap when the minimap is
      resized.
    * Fixed: Enable blurring in the title screen.
